[package]
name = "test-contract"
version = "0.3.0"
edition = "2018"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
pyth-sdk-solana = { path = "../", version = "0.10.0" }
solana-program = "1.18.17"
bytemuck = "1.7.2"
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "1.18.17"
solana-client = "1.18.17"
solana-sdk = "1.18.17"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
